<resources>
    <string name="app_name">nbc sign in</string>
    <string name="id_text">아이디</string>
    <string name="password_text">비밀번호</string>
    <string name="input_id_hint">아이디를 입력하세요.</string>
    <string name="input_password_hint">비밀번호를 입력하세요.</string>
    <string name="input_password_rule">숫자, 대/소문자, 특문 포함 8~16자리</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in_success">로그인 성공</string>
    <string name="sign_in_failure">아이디/비밀번호를 확인해주세요</string>
    <string name="name_text">이름</string>
    <string name="input_name_hint">이름을 입력하세요.</string>
    <string name="sign_up_failure">입력되지 않은 정보가 있습니다</string>
    <string name="finish">종료</string>
    <string name="email_text">이메일</string>
    <string name="input_email_hint">aaa@gmail.com</string>
    <string name="password_confirm_text">비밀번호 확인</string>
    <string name="input_password_confirm_hint">비밀번호를 한번 더 입력하세요.</string>
</resources>