<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_extra_large"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImageView"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        android:src="@drawable/genesis_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/idTextView"
        android:layout_marginBottom="@dimen/margin_small"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/id_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/idInputEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/idInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_id_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/halfGuideLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/password_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/halfGuideLine" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        android:hint="@string/input_password_hint"
        tools:text="123124124asdasd"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"
        style="@style/Theme.NbcSignIn.Button"
        android:layout_marginTop="@dimen/margin_extra_large"
        app:layout_constraintTop_toBottomOf="@id/passwordInputEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        style="@style/Theme.NbcSignIn.Button"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>