<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_extra_large">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfGuideLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userIconImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="@dimen/margin_small"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:text="@string/name_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nameInputEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:hint="@string/input_name_hint"
        app:layout_constraintBottom_toTopOf="@id/emailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameWarnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/nameInputEditText"
        app:layout_constraintEnd_toEndOf="@id/nameInputEditText"
        tools:text="확인용 텍스트" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:text="@string/email_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/emailInputEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:hint="@string/input_email_hint"
        app:layout_constraintBottom_toTopOf="@id/idTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailWarnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/emailInputEditText"
        app:layout_constraintEnd_toEndOf="@id/emailInputEditText"
        tools:text="확인용 텍스트" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:text="@string/id_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/halfGuideLine"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/idInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_id_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/halfGuideLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/idWarnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/idInputEditText"
        app:layout_constraintEnd_toEndOf="@id/idInputEditText"
        tools:text="아이디 좀 입력하세요 제발요" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/password_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idInputEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:hint="@string/input_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordWarnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/passwordInputEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordInputEditText"
        tools:text="확인용 텍스트" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordConfirmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/password_confirm_text"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordConfirmInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:hint="@string/input_password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmTextView"
        tools:text="123124124asdasd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordConfirmWarnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/passwordConfirmInputEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordConfirmInputEditText"
        tools:text="확인용 텍스트" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        style="@style/Theme.NbcSignIn.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmInputEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>